# gtkpp

./: .gitmodules  CMakeLists.txt  README.md
src/: application.cpp  gtkpp.cpp
src/include/gtkpp/: application.hpp  gtkpp.hpp
